--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div class=" col-lg" style="padding: 0px;">
 
-        <img src="assets/imagens/logo.png" width="300" />
+        <a href="index.html"> <img src="assets/imagens/logo.png" width="300" /> </a>
 
       </div>
 
